refactor: swagger docs update with error response model
